[FIX] web: kanban column creation layout
This commit is a follow-up of odoo/odoo@b72598150501c19af089e79a9557df2b0cda63ad .

It avoids the quick create column to shrink below its base width on
tablet-like screens.

Also, it fixes the scroll of the example columns on mobile-like screens.
By doing so, it allows to scroll to the "example column" but no further,
giving a hint of what a kanban column can look like but not cluttering
too much the view to not "lose" the user in the examples on mobile (as
in this context, the view is column centric and not global like on
desktop).

Part of the SCSS revamp task-2704984

task-2883057

--- a/addons/web/static/src/legacy/scss/kanban_view.scss
+++ b/addons/web/static/src/legacy/scss/kanban_view.scss
@@ -539,6 +539,7 @@
     // Kanban Grouped Layout - "Create new column" column
     .o_column_quick_create {
         flex-basis: $o-kanban-small-record-width + 2*$o-kanban-group-padding;
+        flex-shrink: 0;
 
         .o_quick_create_folded {
             cursor: pointer;
@@ -580,10 +581,10 @@
     }
 
     @include media-breakpoint-down(sm) {
-        .o_kanban_group, .o_column_quick_create {
+        .o_kanban_group, .o_column_quick_create, .o_kanban_example_background_container {
             flex: 1 0 90%; // don't take full width to give a hint of next/previous column
             scroll-snap-align: center;
-            overflow-y: scroll;
+            overflow: hidden scroll;
 
             .o_kanban_header {
                 position: sticky; // keep it visible
